# pillepas

./: .gitignore  pyproject.toml
src/pillepas/: __init__.py  config.py  const.py  crypto.py  data_tools.py  example_data.json  fields.yaml  form_fields.yaml  meh.py  user_inputs.py  utils.py
src/pillepas/automation/: actions.py  base.py  fill_form.py  form_gateway.py  interactions.py  make_proxies.py  proxy_classes.py  robots.py  utils.py
src/pillepas/cli/: actions.py  cli.py  menu_tree.py  tree_utils.py  user_inputs.py
src/pillepas/persistence/: crypto.py  data.py  file_handlers.py  gateway.py  setup_gateway.py
src/pillepas/settings/: cli.py
tests/: conftest.py  test_automation.py  test_cryptography.py  test_data.py  test_data_tools.py  test_file_utils.py  test_gateway.py  test_persistence.py  test_tree_utils.py
