[tool.poetry]
name = "pillepas"
version = "0.0.1"
description = ""
authors = ["bjarkemoensted <bjarkemoensted@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
platformdirs = "^4.3.6"
pynacl = "^1.5.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
